@@ -1,5 +1,7 @@
 # List of source files containing translatable strings.
 # Please keep this file sorted alphabetically.
+src/50-metacity-desktop-key.xml.in
+src/50-metacity-key.xml.in
 src/tools/metacity-message.c
 src/delete.c
 src/display.c
