@@ -1,0 +1,20 @@
+<?xml version="1.0" encoding="UTF-8" ?>
+<KeyListEntries _name="Desktop" wm_name="Metacity" package="metacity">
+
+	<KeyListEntry
+	name="/apps/metacity/global_keybindings/panel_run_dialog" />
+
+	<KeyListEntry
+	name="/apps/metacity/global_keybindings/panel_main_menu" />
+
+	<KeyListEntry
+	name="/apps/metacity/global_keybindings/run_command_screenshot" />
+
+	<KeyListEntry
+	name="/apps/metacity/global_keybindings/run_command_window_screenshot" />
+
+	<KeyListEntry
+	name="/apps/metacity/global_keybindings/run_command_terminal" />
+
+</KeyListEntries>
+
