@@ -1,0 +1,266 @@
+<?xml version="1.0" encoding="UTF-8" ?>
+<KeyListEntries _name="Window Management" wm_name="Metacity" package="metacity">
+
+	<KeyListEntry
+	name="/apps/metacity/window_keybindings/activate_window_menu" />
+
+	<KeyListEntry
+	name="/apps/metacity/window_keybindings/toggle_fullscreen" />
+
+	<KeyListEntry
+	name="/apps/metacity/window_keybindings/toggle_maximized" />
+
+	<KeyListEntry
+	name="/apps/metacity/window_keybindings/maximize" />
+
+	<KeyListEntry
+	name="/apps/metacity/window_keybindings/unmaximize" />
+
+	<KeyListEntry
+	name="/apps/metacity/window_keybindings/toggle_shaded" />
+
+	<KeyListEntry
+	name="/apps/metacity/window_keybindings/close" />
+
+	<KeyListEntry
+	name="/apps/metacity/window_keybindings/minimize" />
+
+	<KeyListEntry
+	name="/apps/metacity/window_keybindings/begin_move" />
+
+	<KeyListEntry
+	name="/apps/metacity/window_keybindings/begin_resize" />
+
+	<KeyListEntry
+	name="/apps/metacity/window_keybindings/toggle_on_all_workspaces"
+	value="1"
+	key="/apps/metacity/general/num_workspaces"
+	comparison="gt" />
+
+	<KeyListEntry
+	name="/apps/metacity/window_keybindings/raise_or_lower" />
+
+	<KeyListEntry
+	name="/apps/metacity/window_keybindings/raise" />
+
+	<KeyListEntry
+	name="/apps/metacity/window_keybindings/lower" />
+
+	<KeyListEntry
+	name="/apps/metacity/window_keybindings/maximize_vertically" />
+
+	<KeyListEntry
+	name="/apps/metacity/window_keybindings/maximize_horizontally" />
+
+	<KeyListEntry
+	name="/apps/metacity/window_keybindings/move_to_workspace_1"
+	value="1"
+	key="/apps/metacity/general/num_workspaces"
+	comparison="gt" />
+
+	<KeyListEntry
+	name="/apps/metacity/window_keybindings/move_to_workspace_2"
+	value="1"
+	key="/apps/metacity/general/num_workspaces"
+	comparison="gt" />
+
+	<KeyListEntry
+	name="/apps/metacity/window_keybindings/move_to_workspace_3"
+	value="2"
+	key="/apps/metacity/general/num_workspaces"
+	comparison="gt" />
+
+	<KeyListEntry
+	name="/apps/metacity/window_keybindings/move_to_workspace_4"
+	value="3"
+	key="/apps/metacity/general/num_workspaces"
+	comparison="gt" />
+
+	<KeyListEntry
+	name="/apps/metacity/window_keybindings/move_to_workspace_5"
+	value="4"
+	key="/apps/metacity/general/num_workspaces"
+	comparison="gt" />
+
+	<KeyListEntry
+	name="/apps/metacity/window_keybindings/move_to_workspace_6"
+	value="5"
+	key="/apps/metacity/general/num_workspaces"
+	comparison="gt" />
+
+	<KeyListEntry
+	name="/apps/metacity/window_keybindings/move_to_workspace_7"
+	value="6"
+	key="/apps/metacity/general/num_workspaces"
+	comparison="gt" />
+
+	<KeyListEntry
+	name="/apps/metacity/window_keybindings/move_to_workspace_8"
+	value="7"
+	key="/apps/metacity/general/num_workspaces"
+	comparison="gt" />
+
+	<KeyListEntry
+	name="/apps/metacity/window_keybindings/move_to_workspace_9"
+	value="8"
+	key="/apps/metacity/general/num_workspaces"
+	comparison="gt" />
+
+	<KeyListEntry
+	name="/apps/metacity/window_keybindings/move_to_workspace_10"
+	value="9"
+	key="/apps/metacity/general/num_workspaces"
+	comparison="gt" />
+
+	<KeyListEntry
+	name="/apps/metacity/window_keybindings/move_to_workspace_11"
+	value="10"
+	key="/apps/metacity/general/num_workspaces"
+	comparison="gt" />
+
+	<KeyListEntry
+	name="/apps/metacity/window_keybindings/move_to_workspace_12"
+	value="11"
+	key="/apps/metacity/general/num_workspaces"
+	comparison="gt" />
+
+	<KeyListEntry
+	name="/apps/metacity/window_keybindings/move_to_workspace_left"
+	value="1"
+	key="/apps/metacity/general/num_workspaces"
+	comparison="gt" />
+
+	<KeyListEntry
+	name="/apps/metacity/window_keybindings/move_to_workspace_right"
+	value="1"
+	key="/apps/metacity/general/num_workspaces"
+	comparison="gt" />
+
+	<KeyListEntry
+	name="/apps/metacity/window_keybindings/move_to_workspace_up"
+	value="1"
+	key="/apps/metacity/general/num_workspaces"
+	comparison="gt" />
+
+	<KeyListEntry
+	name="/apps/metacity/window_keybindings/move_to_workspace_down"
+	value="1"
+	key="/apps/metacity/general/num_workspaces"
+	comparison="gt" />
+
+	<KeyListEntry
+	name="/apps/metacity/global_keybindings/switch_windows" />
+
+	<KeyListEntry
+	name="/apps/metacity/global_keybindings/switch_panels" />
+
+	<KeyListEntry
+	name="/apps/metacity/global_keybindings/cycle_windows" />
+
+	<KeyListEntry
+	name="/apps/metacity/global_keybindings/cycle_group" />
+
+	<KeyListEntry
+	name="/apps/metacity/global_keybindings/cycle_panels" />
+
+	<KeyListEntry
+	name="/apps/metacity/global_keybindings/show_desktop" />
+
+	<KeyListEntry
+	name="/apps/metacity/global_keybindings/switch_to_workspace_1"
+	value="1"
+	key="/apps/metacity/general/num_workspaces"
+	comparison="gt" />
+
+	<KeyListEntry
+	name="/apps/metacity/global_keybindings/switch_to_workspace_2"
+	value="1"
+	key="/apps/metacity/general/num_workspaces"
+	comparison="gt" />
+
+	<KeyListEntry
+	name="/apps/metacity/global_keybindings/switch_to_workspace_3"
+	value="2"
+	key="/apps/metacity/general/num_workspaces"
+	comparison="gt" />
+
+	<KeyListEntry
+	name="/apps/metacity/global_keybindings/switch_to_workspace_4"
+	value="3"
+	key="/apps/metacity/general/num_workspaces"
+	comparison="gt" />
+
+	<KeyListEntry
+	name="/apps/metacity/global_keybindings/switch_to_workspace_5"
+	value="4"
+	key="/apps/metacity/general/num_workspaces"
+	comparison="gt" />
+
+	<KeyListEntry
+	name="/apps/metacity/global_keybindings/switch_to_workspace_6"
+	value="5"
+	key="/apps/metacity/general/num_workspaces"
+	comparison="gt" />
+
+	<KeyListEntry
+	name="/apps/metacity/global_keybindings/switch_to_workspace_7"
+	value="6"
+	key="/apps/metacity/general/num_workspaces"
+	comparison="gt" />
+
+	<KeyListEntry
+	name="/apps/metacity/global_keybindings/switch_to_workspace_8"
+	value="7"
+	key="/apps/metacity/general/num_workspaces"
+	comparison="gt" />
+
+	<KeyListEntry
+	name="/apps/metacity/global_keybindings/switch_to_workspace_9"
+	value="8"
+	key="/apps/metacity/general/num_workspaces"
+	comparison="gt" />
+
+	<KeyListEntry
+	name="/apps/metacity/global_keybindings/switch_to_workspace_10"
+	value="9"
+	key="/apps/metacity/general/num_workspaces"
+	comparison="gt" />
+
+	<KeyListEntry
+	name="/apps/metacity/global_keybindings/switch_to_workspace_11"
+	value="10"
+	key="/apps/metacity/general/num_workspaces"
+	comparison="gt" />
+
+	<KeyListEntry
+	name="/apps/metacity/global_keybindings/switch_to_workspace_12"
+	value="11"
+	key="/apps/metacity/general/num_workspaces"
+	comparison="gt" />
+
+	<KeyListEntry
+	name="/apps/metacity/global_keybindings/switch_to_workspace_left"
+	value="1"
+	key="/apps/metacity/general/num_workspaces"
+	comparison="gt" />
+
+	<KeyListEntry
+	name="/apps/metacity/global_keybindings/switch_to_workspace_right"
+	value="1"
+	key="/apps/metacity/general/num_workspaces"
+	comparison="gt" />
+
+	<KeyListEntry
+	name="/apps/metacity/global_keybindings/switch_to_workspace_up"
+	value="1"
+	key="/apps/metacity/general/num_workspaces"
+	comparison="gt" />
+
+	<KeyListEntry
+	name="/apps/metacity/global_keybindings/switch_to_workspace_down"
+	value="1"
+	key="/apps/metacity/general/num_workspaces"
+	comparison="gt" />
+
+</KeyListEntries>
+
